--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,25 @@ img{
     grid-template-columns: repeat(2,1fr);
     gap: 5px;
 }
+
+/* small device */
+@media screen and (max-width: 576px) {
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+    .collage-multiple{
+        grid-template-columns: 1fr;
+    }
+}
+
+/* medium device */
+@media screen and (min-width: 576px) and (max-width:992px){
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+    .collage-multiple{
+        grid-template-columns: 1fr;
+    }
+}
